Make generic post plan actions, add in slack alerts, add in time taken for validations